# music-app

./: README.md  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  main.rs
src/app/: page.tsx
src/app/components/: AddContent.module.css  AddContent.tsx  Footer.module.css  Footer.tsx  Library.module.css  Library.tsx  Login.module.css  Login.tsx  Profile.module.css  Profile.tsx  SamplesAndPresets.module.css  SamplesAndPresets.tsx  Sidebar.module.css  Sidebar.tsx
