[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.217", features = [] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2"
rodio = "0.20.1"
tokio = {version = "1.42.0", features = ["full"] }
firebase-rs = "2.2.0"
reqwest = "0.12.12"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
env_logger = "0.10"
mongodb = "3.1.1"
base64 = "0.22.1"
tauri-plugin-shell = "2.0.0"
argon2 = "0.5.3"
rand = "0.9.0"
dotenv = "0.15.0"
